--- a/main.html
+++ b/main.html
@@ -8,6 +8,40 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<label for="game-number">Game Number</label>
+	<input type="number" data-ns-test="game-number" id="game-number">
+
+	<br>
+	<br>
+	
+	<button data-ns-test="rock">rock</button>
+	<button data-ns-test="paper">paper</button>
+	<button data-ns-test="scissors">scissors</button>
+	
+	<button data-ns-test="play-games">Play</button>
+	<br>
+	<br>
+	<br>
+
+	
+	<label for="round-result">round result : </label>
+    <p data-ns-test="round-result" id="round-result">round result</p>
+	<br>
+	<label for="computer-choose">computer chose : </label>
+	<p data-ns-test="computer-choose" id="computer-choose">computer chose</p>
+	<br>
+	<label for="rounds-left">rounds-left : </label>
+	<p data-ns-test="rounds-left" id="rounds-left">rounds-left</p>
+	<br>
+	<label for="user-points">user-points : </label>
+	<p data-ns-test="user-points" id="user-points">user-points</p>
+	<br>
+	<label for="computer-points">computer-points : </label>
+	<p data-ns-test="computer-points" id="computer-points">computer-points</p>
+	<br>
+	<label for="game-result">game-result : </label>
+	<p data-ns-test="game-result" id="game-result">game-result</p>
+	
     <script type="text/javascript" src="./script.js">
 </script>
 
