--- a/main.html
+++ b/main.html
@@ -14,11 +14,11 @@
 	<br>
 	<br>
 	
-	<button data-ns-test="rock">rock</button>
-	<button data-ns-test="paper">paper</button>
-	<button data-ns-test="scissors">scissors</button>
+	<button data-ns-test="rock" id="rock">rock</button>
+	<button data-ns-test="paper" id="paper">paper</button>
+	<button data-ns-test="scissors" id="scissor">scissors</button>
 	
-	<button data-ns-test="play-games">Play</button>
+	<button data-ns-test="play-game" id="play-games">Play</button>
 	<br>
 	<br>
 	<br>
