--- a/main.html
+++ b/main.html
@@ -14,9 +14,9 @@
 	<br>
 	<br>
 	
-	<button data-ns-test="rock" id="rock">rock</button>
-	<button data-ns-test="paper" id="paper">paper</button>
-	<button data-ns-test="scissors" id="scissor">scissors</button>
+	<button data-ns-test="rock" id="rock" value="ROCK">rock</button>
+	<button data-ns-test="paper" id="paper" value="PAPER">paper</button>
+	<button data-ns-test="scissors" id="scissor" value="SCISSORS">scissors</button>
 	
 	<button data-ns-test="play-game" id="play-games">Play</button>
 	<br>
