--- a/main.html
+++ b/main.html
@@ -25,7 +25,7 @@
 
 	
 	<label for="round-result">round result : </label>
-    <p data-ns-test="round-result" id="round-result">round result</p>
+    <p data-ns-test="round-result" id="round-result">TIE</p>
 	<br>
 	<label for="computer-choose">computer chose : </label>
 	<p data-ns-test="computer-choose" id="computer-choose">computer chose</p>
