--- a/main.html
+++ b/main.html
@@ -28,19 +28,19 @@
     <p data-ns-test="round-result" id="round-result">TIE</p>
 	<br>
 	<label for="computer-choose">computer chose : </label>
-	<p data-ns-test="computer-choose" id="computer-choose">computer chose</p>
+	<p data-ns-test="computer-choose" id="computer-choose">SCISSORS</p>
 	<br>
 	<label for="rounds-left">rounds-left : </label>
-	<p data-ns-test="rounds-left" id="rounds-left">rounds-left</p>
+	<p data-ns-test="rounds-left" id="rounds-left">0</p>
 	<br>
 	<label for="user-points">user-points : </label>
-	<p data-ns-test="user-points" id="user-points">user-points</p>
+	<p data-ns-test="user-points" id="user-points">0</p>
 	<br>
 	<label for="computer-points">computer-points : </label>
-	<p data-ns-test="computer-points" id="computer-points">computer-points</p>
+	<p data-ns-test="computer-points" id="computer-points">0</p>
 	<br>
 	<label for="game-result">game-result : </label>
-	<p data-ns-test="game-result" id="game-result">game-result</p>
+	<p data-ns-test="game-result" id="game-result">TIE</p>
 	
     <script type="text/javascript" src="./script.js">
 </script>
